# sequence_board_game

./: .gitignore  README.md  app.py  firebase.json  firestore.rules  main.py  requirements.txt  storage.rules  trainingfoldergenerator.py
training/: README.md  pyproject.toml  starter.ipynb
training/agents/: base_agent.py  heuristics.py  human_agent.py  opponent_pool.py  ppo_frozen_agent.py  rating.py  selfplay_manager.py
training/algorithms/: base_policy.py
training/configs/: _eval_runtime_1756173961.json  _eval_runtime_1756176560.json  _eval_runtime_1756418353.json  _eval_runtime_1756506485.json  _eval_runtime_1756532746.json  _eval_runtime_1756755610.json  _eval_runtime_1756923137.json  _eval_runtime_1756925129.json  _eval_runtime_1756929360.json  _eval_runtime_1756959718.json  _runtime_1756147059.json  _runtime_1756147206.json  _runtime_1756148431.json  _runtime_1756153432.json  _runtime_1756415888.json  _runtime_1756420064.json  _runtime_1756492893.json  _runtime_1756497857.json  _runtime_1756532764.json  _runtime_1756534610.json  _runtime_1756743109.json  _runtime_1756754523.json  _runtime_1756772128.json  _runtime_1756773629.json  _runtime_1756935567.json  _runtime_1756936502.json  _runtime_1756965878.json  _runtime_1756967141.json  debug-fast.json  default.json  full-tiny-smoke.json  full-tiny-smoke_1.json  tiny-smoke.json
training/encoders/: board_encoder.py  hand_encoder.py  history_encoder.py  probability_layers.py  threat_features.py
training/engine/: board_layout.py  cards.py  engine_core.py  errors.py  rng.py  rules.py  state.py
(+486 files in other folders)
